# DSProcessor

./: .gitignore  README.md  __init__.py  __main__.py  package.py  pyproject.toml  requirements.txt
data/task1/readfile/: input_normal.txt  result_normal.json
data/task5/: DerivativeSignal.py
data/task5/dct/: result.txt
data/task5/folding/: result-shift_folded_by_500.txt
data/task6/moving-avg/: Instructions.docx
data/task7/Sampling test cases/: READ ME.docx
dsp/: __init__.py
dsp/app/: __init__.py
dsp/app/components/: __init__.py  mpl_canvas.py  number_dialog.py  radio_dialog.py
dsp/enums/: arithmetic_op.py  filter_type.py  graph_function.py  graph_type.py  signal_domain.py
dsp/math_utils/: __init__.py
dsp/models/: DigitalSignal.py  Filter.py  FrequencySignal.py  TimeSignal.py  Window.py  __init__.py
dsp/utils/: __init__.py
tests/: __init__.py  test_fir_filters.py  test_resampling.py  test_task1.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py  test_task6.py
tests/funcs/: ConvTest.py  QuanTest1.py  QuanTest2.py  Shift_Fold_Signal.py  compareFreqDom.py  compareSignals.py
